Fix issue where there was margin on the top of slider on Safari

--- a/style.css
+++ b/style.css
@@ -215,13 +215,6 @@
      margin-right: auto;
   }
 
-   .single-featured-image-header,
-   .panel-image,
-   :not(.has-featured-image .home) .site-content-contain,
-   :not(.panel-image) .site-content-contain,
-   home .site-content-contain {
-     margin-top:7.5rem;
-   }
 
   .has-featured-image .site-content-contain{
      margin-top:0 !important;
@@ -5311,11 +5304,6 @@ h2.entry-title.interior-page {
        .post-template-single-featured-story .single-featured-image-header,
        .post-template-single-image-header .single-featured-image-header  {
          max-width: 2000px;
-       }
-
-       :not(.has-featured-image .home) .site-content-contain {
-         margin-top: 9.375rem;
-         /* margin-top:10.15625rem; */
        }
 
        /* If the post is a News Article & it has a Featured Image*/
